<resources>
    <string name="app_name">AP-wifi-master</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">search</string>
    <string name="connect_wifi">链接wifi</string>
    <string name="wifi_name">ssid</string>
    <string name="wifi_pw">password</string>
    <string name="connect_tip">连接wifi时，会暂时断掉家庭WiFi</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
</resources>
