<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="322dp"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/margin13"
    android:paddingLeft="@dimen/margin23"
    android:paddingRight="@dimen/margin23"
    android:paddingBottom="@dimen/margin17"
    android:orientation="vertical"
    android:background="@drawable/background_white">

    <TextView
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="@dimen/size15"
        android:text="@string/connect_wifi"/>

    <EditText
        android:id="@+id/wifi_name"
        android:textSize="@dimen/size15"
        android:layout_marginTop="@dimen/margin17"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin30"
        android:background="@drawable/background_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin7"
        android:hint="@string/wifi_name"/>


    <EditText
        android:textSize="@dimen/size15"
        android:id="@+id/wifi_pw"
        android:layout_marginTop="@dimen/margin13"
        android:layout_marginBottom="@dimen/margin17"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin30"
        android:background="@drawable/background_white"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/margin7"
        android:hint="@string/wifi_pw"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:background="@drawable/gray_bg"
            android:layout_height="match_parent"
            android:text="@string/cancel"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/size15"/>
        <TextView
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/margin17"
            android:layout_weight="1"
            android:background="@drawable/common_bt_bg"
            android:layout_height="match_parent"
            android:text="@string/sure"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/size15"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connect_tip"
        android:textSize="@dimen/size12"
        android:layout_marginTop="@dimen/margin13"/>
</LinearLayout>